# YASSS

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
yasss/src/: solver.py
yasss/test/: test_sudoku_solver.py
