[metadata]
name = yasss
summary = SAT based Sudoku solver
description-file =
    README.md
author = Benjamin Diaz
author-email = benjamindiazfuica@gmail.com
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    yasss